Remove participant authentication, recruitment, and team routes; clean up writeup routes Clean up of the AmazeCC Available routes
